--- a/faq/support-community/contributing.mdx
+++ b/faq/support-community/contributing.mdx
@@ -1,165 +1,164 @@
 ---
-title: "Contributing Questions & Contact Points"
-description: "Explains routes for contributing feedback, reporting issues, or getting involved with the GoogleTest project, including code contributions and community engagement."
+title: "How Can I Contribute or Report Problems?"
+description: "Describes paths for contributing bug reports, documentation improvements, or code. Explains contribution policies, community standards, and expected etiquette."
 ---
 
-# Contributing Questions & Contact Points
+# How Can I Contribute or Report Problems?
 
-## Overview
-
-Contributing to GoogleTest is a valuable way to help improve this widely used C++ testing framework. Whether you are reporting bugs, requesting features, submitting code contributions, or engaging with the community, this guide explains the best routes for your input and involvement. It covers reporting issues effectively, submitting changes, joining discussions, and understanding project governance.
-
----
-
-## How to Provide Feedback or Report Issues
-
-The GoogleTest project welcomes input from users and contributors in several ways:
-
-### Bug Reports and Feature Requests
-
-- **Where to report:** Use the GitHub repository's [Issues](https://github.com/google/googletest/issues) page to submit new bug reports or feature requests.
-- **Before submitting:** Search existing issues to avoid duplicates.
-- **What to include in reports:**
-  - A clear description of the problem or feature.
-  - Reproducible steps or code snippets.
-  - Expected vs actual behavior.
-  - Environment details including platform, compiler, and GoogleTest version.
-
-### Guidelines for Writing Effective Issues
-
-Providing actionable and clear reports speeds up triage and resolution. Include:
-
-- Minimal, complete, and verifiable examples.
-- Clear error messages or stack traces.
-- Any relevant logs or output.
-
-For more thorough troubleshooting, users can consult [Validation & Troubleshooting](https://github.com/google/googletest/tree/main/docs#getting-started/configuration-validation/validation-troubleshooting) documentation.
+Contributing to GoogleTest is a vital part of keeping the framework robust, up-to-date, and valuable to the community. Whether you want to file a bug report, suggest improvements, contribute documentation, or submit code, this guide will walk you through the appropriate paths and best practices to ensure your contributions are effective, well-received, and aligned with project standards.
 
 ---
 
-## Making Code Contributions
+## Reporting Bugs
 
-### Contribution Process
+### When to Report a Bug
 
-GoogleTest follows standard open source contribution practices:
+- You have identified a reproducible problem or incorrect behavior in GoogleTest or GoogleMock.
+- You have encountered build or runtime errors, crashes, or flaky tests not caused by your code.
+- The documentation is incorrect or misleading about a particular feature.
 
-1. **Fork the Repository:** Create your own copy of the repository for your changes.
-2. **Create a Branch:** Use a feature branch for your work.
-3. **Implement Changes:** Follow the project's coding style, adding tests and documentation as appropriate.
-4. **Test Your Changes:** Verify your code with existing and new tests.
-5. **Submit a Pull Request (PR):** Open a PR to the main repository, describing your changes clearly.
+### How to File a Bug Report
 
-### Best Practices
+- **Search Existing Issues**: Before filing, search the [GitHub Issues](https://github.com/google/googletest/issues) to avoid duplicates.
+- **Include a Clear Title**: Summarize the problem succinctly.
+- **Provide a Minimal Reproducible Example**: Share code that triggers the issue, including platform details and GoogleTest version.
+- **Describe Expected vs. Actual Behavior**: Clearly state what you expect and what you got instead.
+- **Attach Logs and Error Messages**: Include build output, test output, and any relevant error traces.
 
-- Review the [CONTRIBUTING.md](https://github.com/google/googletest/blob/main/CONTRIBUTING.md) file for detailed guidance on coding standards, commit messages, tests, and licensing.
-- Include tests that cover your changes.
-- Keep your commits focused and descriptive.
-- Run existing test suites locally before submission to ensure stability.
+### Best Practices for Bug Reports
 
-### Reviewing and Merging
+- Be concise but thorough.
+- Use code formatting for all code snippets.
+- Provide environment details: OS, compiler version, and build system.
 
-- Contributions are reviewed by maintainers.
-- Feedback may be provided for improvements.
-- Once accepted, the PR will be merged following the project's review policies.
-
----
-
-## Engaging with the Community
-
-GoogleTest maintains an active and welcoming user and contributor community:
-
-- **Google Groups:** Participate in discussions and ask questions.
-- **GitHub Discussions:** Engage with feature ideas, usage questions, and announcements.
-- **Stack Overflow:** Search and ask questions tagged `googletest` or `googlemock`.
-
-Contributors and maintainers monitor these channels to offer support and gather input.
+<Tip>
+Providing a minimal reproducible example expedites debugging and leads to faster resolutions.
+</Tip>
 
 ---
 
-## Recognizing Contributors
+## Contributing Code
 
-The project values all contributions. The [`CONTRIBUTORS`](https://github.com/google/googletest/blob/main/CONTRIBUTORS) file lists individuals who have made non-trivial contributions, underscoring the community's collaborative spirit.
+### Contribution Workflow
+
+1. **Fork the Repository**: Work on your changes in a fork to keep your work separate.
+2. **Follow Coding Standards**: Write clear, maintainable, and well-documented C++ code following GoogleTest conventions.
+3. **Test Your Changes**: Include tests for your code changes, verify all existing tests pass.
+4. **Run Formatters and Linters**: Use clang-format and static analysis tools to clean your code.
+5. **Submit a Pull Request (PR)**: Provide a detailed PR description explaining the motivation, scope, and impact.
+
+### Coding and Review Guidelines
+
+- Keep changes focused and incremental.
+- Document new or altered public APIs clearly.
+- Address code review comments promptly.
+- Write unit tests and add sample usage if applicable.
+
+<Tip>
+Refer to the `CONTRIBUTING.md` file in the repository for detailed contribution policies and best practices.
+</Tip>
 
 ---
 
-## Code of Conduct
+## Improving Documentation
 
-All contributors and participants are expected to adhere to the project's [Code of Conduct](https://github.com/google/googletest/blob/main/CODE_OF_CONDUCT.md), ensuring a respectful, inclusive, and productive environment.
+We welcome community contributions to improve the clarity, accuracy, and breadth of GoogleTest documentation.
+
+### How to Contribute Documentation
+
+- Fix typos, grammar issues, or formatting problems.
+- Add new guides, examples, or FAQs that help users understand and use GoogleTest more effectively.
+- Update existing documentation to reflect new features or breaking changes.
+
+### Where to Contribute
+
+- Documentation lives primarily in the [`docs/`](https://github.com/google/googletest/tree/main/docs) folder and is rendered on the official site.
+- Use Markdown formatting and follow the style conventions used in existing docs.
+- Open PRs targeting just documentation for review and merging.
+
+<Tip>
+Good documentation contributions often accelerate adoption and reduce support requests.
+</Tip>
+
+---
+
+## Community Etiquette and Policies
+
+To maintain a welcoming and constructive environment:
+
+- **Be Respectful and Professional**: Avoid harassment, discrimination, or offensive language.
+- **Follow the [Code of Conduct](https://github.com/google/googletest/blob/main/CODE_OF_CONDUCT.md)**.
+- **Engage Politely in Discussions**: Provide constructive feedback and remain patient.
+- **Respect Intellectual Property**: Submit only code or documentation you have the right to share.
+
+<Tip>
+Fostering positive collaboration helps everyone learn and improves the quality of GoogleTest.
+</Tip>
 
 ---
 
 ## Additional Resources
 
-- [GoogleTest User’s Guide](https://google.github.io/googletest/) — For documentation on usage and testing.
-- [GoogleMock Cookbook](https://google.github.io/googletest/gmock_cook_book.html) — Learn about mocking techniques.
-- [CONTRIBUTING.md](https://github.com/google/googletest/blob/main/CONTRIBUTING.md) — Complete contribution instructions.
-- [Issues on GitHub](https://github.com/google/googletest/issues) — Report bugs or suggest features.
-- [Community-Created Documentation](https://github.com/google/googletest/blob/main/docs/community_created_documentation.md) — Additional user-generated resources.
+- [GoogleTest GitHub Repository](https://github.com/google/googletest)
+- [Issue Tracker](https://github.com/google/googletest/issues)
+- Contribution guidelines in [`CONTRIBUTING.md`](https://github.com/google/googletest/blob/main/CONTRIBUTING.md)
+- [Code of Conduct](https://github.com/google/googletest/blob/main/CODE_OF_CONDUCT.md)
+- Official Documentation Site: [https://google.github.io/googletest/](https://google.github.io/googletest/)
 
 ---
 
 ## Summary
 
-- **Report issues and suggestions** via GitHub Issues with detailed descriptions.
-- **Submit code changes** through fork-branch-PR workflow with proper testing and documentation.
-- **Engage on mailing lists, GitHub discussions, and Stack Overflow** to get help and share knowledge.
-- **Adhere to community guidelines and code of conduct** to maintain a positive environment.
-
-Your participation helps make GoogleTest better for everyone.
+Contributions widely enhance GoogleTest and GoogleMock for all users. Whether reporting problems, submitting code, or improving documentation, adhering to the defined workflows and maintaining professional standards accelerates adoption and keeps the project healthy. We encourage you to participate actively and consult existing issues, guidelines, and documentation for a smooth contribution experience.
 
 ---
 
-## Example: Opening a Bug Report
+## Example: Submitting a Bug Report
 
 ```markdown
-Title: "Failing EXPECT_EQ in Multithreaded Environment on Windows"
+Title: GoogleTest crashes when running on macOS 11 with clang 12
 
 Description:
-I'm encountering an intermittent failure with `EXPECT_EQ` on Windows when tests run concurrently. The failure occurs randomly under high load.
+When running `RUN_ALL_TESTS()` on macOS 11 using clang 12, GoogleTest crashes during test suite teardown. This behavior started after upgrading from GoogleTest version 1.10.0 to 1.11.0.
 
 Steps to Reproduce:
-1. Build GoogleTest on Windows with Visual Studio 2019.
-2. Run the provided multithreaded test example from `samples/sample1_unittest.cc`.
+1. Clone the repo.
+2. Build GoogleTest with clang 12.
+3. Run the following simple test program:
 
-Expected Behavior:
-Tests pass consistently.
+```cpp
+#include <gtest/gtest.h>
 
-Actual Behavior:
-`EXPECT_EQ` sometimes fails with mismatched values reported.
+TEST(SimpleTest, AlwaysPasses) {
+  EXPECT_TRUE(true);
+}
+
+int main(int argc, char** argv) {
+  ::testing::InitGoogleTest(&argc, argv);
+  return RUN_ALL_TESTS();
+}
+```
+
+Expected:
+Tests run and exit cleanly.
+
+Actual:
+Crash with stack trace indicating memory access violation.
 
 Environment:
-- GoogleTest version: v1.17.0
-- OS: Windows 10
-- Compiler: MSVC 2019
+- OS: macOS 11.2
+- Compiler: clang 12
+- GoogleTest version: 1.11.0
 
-Any suggestions or fixes would be appreciated.
+Attached logs and stack trace included.
 ```
 
 ---
 
-## Example: Preparing a Pull Request
-
-1. Fork the repo.
-2. Create a branch:
-```sh
-git checkout -b fix-windows-threading-issue
-```
-3. Make your code changes.
-4. Add tests to cover the fix.
-5. Run all tests locally to verify:
-```sh
-bazel test //googletest/...
-```
-6. Commit changes with clear message:
-```sh
-git commit -m "Fix threading issue causing EXPECT_EQ failures on Windows"
-```
-7. Push branch:
-```sh
-git push origin fix-windows-threading-issue
-```
-8. Open a Pull Request with a detailed description.
+This level of detail allows maintainers to identify and fix issues efficiently.
 
 ---
 
-_Thank you for helping improve GoogleTest!_
+## Remember
+
+Good contributions are well tested, documented, and respectful of community standards. This not only helps your patch be accepted but also contributes positively to the open-source ecosystem.
